chore(ci): change base workflows schedule to once a month

--- a/.github/workflows/base.yml
+++ b/.github/workflows/base.yml
@@ -9,7 +9,7 @@ on:
       - master
       - develop
   schedule:
-    - cron:  '0 22 * * *'
+    - cron:  '0 22 1 * *'
   workflow_dispatch:
 
 jobs:
