--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ on:
       - master
       - develop
   schedule:
-    - cron:  '59 23 * * *'
+    - cron:  '59 23 1 * *'
   workflow_dispatch:
 
 permissions:
