--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,8 +20,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        release: [jammy, focal, noble]
-        platform: [amd64, arm64]
+        release: [noble]
+        platform: [amd64]
       fail-fast: false
     steps:
       - name: Copy Repo Files
@@ -132,8 +132,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        release: [bookworm, trixie]
-        platform: [amd64, arm64]
+        release: [trixie]
+        platform: [amd64]
       fail-fast: false
     steps:
       - name: Copy Repo Files
@@ -280,7 +280,7 @@ jobs:
     needs: ubuntu_tests
     strategy:
       matrix:
-        release: [jammy, focal, noble]
+        release: [noble]
       fail-fast: false
     steps:
       - name: Copy Repo Files
@@ -328,7 +328,7 @@ jobs:
     needs: debian_tests
     strategy:
       matrix:
-        release: [bookworm, trixie]
+        release: [trixie]
       fail-fast: false
     steps:
       - name: Copy Repo Files
