--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,8 +18,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        release: [jammy, focal, noble]
-        platform: [amd64, arm64]
+        release: [noble]
+        platform: [amd64]
       fail-fast: false
     steps:
       - name: Copy Repo Files
@@ -132,8 +132,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        release: [bookworm, trixie]
-        platform: [amd64, arm64]
+        release: [trixie]
+        platform: [amd64]
       fail-fast: false
     steps:
       - name: Copy Repo Files
